# AMRS

./: .env.integration-test  .env.test  .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci-test.yaml
bindings/python/amrs/: __init__.py  config.py
bindings/python/amrs/router/: random.py  router.py
examples/: wrr.rs
src/: config.rs  lib.rs  main.rs
src/client/: client.rs  config.rs  mod.rs
src/provider/: common.rs  fake.rs  faker.rs  openai.rs  provider.rs
src/router/: random.rs  router.rs  stats.rs  weight.rs  wrr.rs
src/types/: chat.rs  error.rs  responses.rs
tests/: client.rs
