[package]
name = "arms"
version = "0.0.3"
edition = "2024"

description = "🧬 The adaptive model routing system for exploration and exploitation."
license = "MIT"
repository = "https://github.com/InftyAI/AMRS"
readme = "README.md"
keywords = ["llmops", "ai-gateway", "ai-proxy", "sdk", "llm"]

[dependencies]
async-openai = { version = "0.31.1", features = ["_api", "response-types", "responses", "chat-completion"] }
async-trait = "0.1.89"
derive_builder = "0.20.2"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
rand = "0.9.2"
reqwest = "0.12.26"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }
